// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default  basic:  basic 1`] = `
"
import { createAction } from 'redux-actions'
getCoinRequest

      ↓ ↓ ↓ ↓ ↓ ↓

import { createAction } from 'redux-actions';
let getCoinRequest;
let getCoinSuccess;
let getCoinFailure;
"
`;

exports[`default not run: not run 1`] = `
"
import { createAction } from 'redux-actions'
let geCoinRequest

      ↓ ↓ ↓ ↓ ↓ ↓

import { createAction } from 'redux-actions';
let geCoinRequest;
"
`;
